@@ -252,10 +252,10 @@ module ActiveSupport
       klass == ::Time || super
     end
     alias_method :kind_of?, :is_a?
-  
-    # Neuter freeze because freezing can cause problems with lazy loading of attributes.
+
     def freeze
-      self
+      period; utc; time # preload instance variables before freezing
+      super
     end
 
     def marshal_dump
